changes in chat.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SafeSpace</title>
-    <link rel="icon" href="/src/assets/Favicon.png" type="image/x-icon" sizes="64x64"> 
+    <link rel="icon" href="/src/assets/logo_edited.png" type="image/x-icon" sizes="64x64"> 
     <!-- size is too small, increase size of Favicon -->
   </head>
   <body>
